tests/ui/invalid_buffer_flags_indirect.rs
use pyo3::buffer::PyBufferRequest;

fn main() {
    let _ = PyBufferRequest::simple().indirect().indirect();
}
